web/css/measure.css
.wv-measure-button {
  position: absolute;
  bottom: 128px;
  right: 10px;
  padding: 6px 10px;
}

.modal-dialog.toolbar-modal.measure-tool-modal {
  top: unset;
  right: 10px;
  bottom: 151px;
  & .modal-body {
    padding: 8px 0 0;
    & div {
      padding: 0 5px 10px 10px;
      & .form-check-label {
        margin-left: 24px;
      }
      & i {
        margin-left: 5px;
      }
      & .form-check-input {
        margin: 0 0 0 -20px;
      }
    }
  }
}

@media (max-width: 740px) {
  .wv-measure-button {
    bottom: 10px;
  }
  .modal-dialog.toolbar-modal.measure-tool-modal {
    bottom: 55px;
    margin: 0;
  }
}

.measure-unit-toggle {
  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
  padding: 6px 5px 6px 27px;
  & .custom-control-input:checked ~ .custom-control-label::before {
    border-color: #fff;
  }
  & .custom-control-label {
    margin-left: 30px;
    &::before {
      background-color: #007bff;
      top: 1px;
    }
    &::after {
      top: 3px;
      background-color: #fff;
    }
  }
}

.tooltip-measure {
  position: relative;
  background: #000;
  border-radius: 4px;
  color: #fff;
  padding: 6px 10px;
  white-space: nowrap;
  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.75);
  border: 1px solid rgba(255, 255, 255, 0.5);
}
.tooltip-active {
  font-weight: 500;
  font-size: 16px;
  font-family: 'Roboto Mono', monospace;
}
.tooltip-static {
  font-weight: 500;
  font-size: 16px;
  font-family: 'Roboto Mono', monospace;
  color: #fff;
  text-shadow: 1px 1px 1px #000;
  background-color: #000;
}
.tooltip-active::before,
.tooltip-static::before {
  border-top: 6px solid rgba(0, 0, 0, 1);
  border-right: 6px solid transparent;
  border-left: 6px solid transparent;
  content: "";
  position: absolute;
  bottom: -6px;
  margin-left: -7px;
  left: 50%;
}
.tooltip-static::before {
  border-top-color: #000;
}

